--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,25 +10,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BirthDayCardKotlin">
+        <activity android:name=".MainActivity2"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-
-
-
             </intent-filter>
-
         </activity>
-
         <activity android:name=".ActividadEjemplo" />
 
         <intent-filter>
             <action android:name="android.intent.action.SEND" />
+
             <category android:name="android.intent.category.DEFAULT" />
+
             <data android:mimeType="text/plain" />
-        </intent-filter>/>
+        </intent-filter>
     </application>
 
 </manifest>
